Fix: Color issue on tech buttons in filter on mobile, also fixed margins on input fields in login form

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -68,7 +68,7 @@
   border-radius: 0.25rem 0.25rem;
   border: 1px solid var(--grey-50);
   background: var(--grey-60);
-  margin-bottom: var(--gap-s);
+  margin: var(--gap-s) 0;
 }
 
 .password-wrapper {
